sec4&5.css
.sec-4{
    display:flex;
    flex-direction: column;
    align-items: center;
    gap: 100px;
    padding-top:10px;
    height: 80vh;
    font-family: Arial, sans-serif;
    margin-bottom: 0px;

}
.sec-4-1{
    display: flex;
    flex-direction:column;
    align-items: center;
    font-size: 30px;
    margin-bottom: 10px;
    font-family: Arial, sans-serif;
    gap: 20px;
     margin-bottom: 0px;
}
.skills{
    display:grid;
    grid-template-columns: auto auto auto;
    justify-content: center;
    align-items: center;
    gap:30px;
    font-family: Arial, sans-serif;
    margin-bottom: 0px;

    /* <!--  grid-template-columns: grid-auto-flow: ;--> */
}
.sec-4-1 h1{
    font-size:50px;
    font-weight: 600;
    font-family: Arial, sans-serif;
    margin-bottom: 0px;

}
.sec-4-2,.sec-4-3,.sec-4-4{
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 40px;
    margin-bottom: 0px;
    padding-bottom: 0px;
    font-family: Arial, sans-serif;
}
.box-2{
    border:2px solid black;
    width:400px;
    display: flex;
    flex-direction:column;
    align-items: center;
    padding:20px;
    font-family: Arial, sans-serif;
    border-radius: 15px;
    gap: 15px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    margin-bottom: 0px;
}
.box-1{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 400px;
    padding: 20px;
    border-radius: 15px;
    font-family: Arial, sans-serif;
    padding-left: -600px;
    gap: 15px;
    font-weight: 300;
    font-size:07rem;
    margin-bottom: 0px;
}
.skills-1 img{
    width:30px;
    margin-bottom: 0px;
}
.box-2 >:nth-child(1){
    font-size: 24px;
    font-weight: 600;
    font-family: Arial, sans-serif;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    margin-bottom: 0px;

}
.skills-1 {
    display:flex;
    align-items:start ;
    gap:10px;
    font-family: Arial, sans-serif;
    margin-bottom: 0px;
}
.skills-1-2 {
    display:flex;
    font-family: Arial, sans-serif;
    flex-direction:column;
    margin-bottom: 0px;
}
.skills-1-2 >:nth-child(1){
    font-weight: 600;
    font-family: Arial, sans-serif;
    font-size:18px;
    margin-bottom: 0px;
}
@media(max-width: 1024px){
.sec-4-2{
     flex-direction: column;
     align-items: center;
 } 
.box-2{
    border:2px solid black;
    width:500px;
    display: flex;
    flex-direction:column;
    align-items: center;
    padding:20px;
    border-radius: 15px;
    gap: 15px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}
.skills-1 img{
    width:30px;
}
.box-2 > :nth-child(1){
    font-size: 28px;
    font-weight: 600;
}
.skills{
   gap:50px;
    /* <!--  grid-template-columns: grid-auto-flow: ;--> */
}

.skills-1 {
    display:flex;
    align-items:start ;
    gap:15px;
}
.skills-1 img{
    width: 35px;
}
.skills-1-2 {
    display:flex;
    flex-direction:column;
}
.skills-1-2 >:nth-child(1){
    font-weight: 600;
    font-size:23px;
}
.sec4{
    padding:150px;
}
}
@media(max-width:767px){
.sec-4-2{
     flex-direction: column;
     align-items: center;
     /* padding-bottom:100px; */
 } 
.box-2{
    border:2px solid black;
    width:300px;
    display: flex;
    flex-direction:column;
    align-items: center;
    padding:20px;
    border-radius: 15px;
    gap: 25px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}
.skills-1 img{
    width:30px;
}
.box-2 > :nth-child(1){
    font-size: 20px;
    font-weight: 600;
}
.skills{
   gap:25px;
    /* <!--  grid-template-columns: grid-auto-flow: ;--> */
}

.skills-1 {
    display:flex;
    align-items:start ;
    gap:10px;
}
.skills-1 img{
    width: 25px;
}
.skills-1-2 {
    display:flex;
    flex-direction:column;
}
.skills-1-2 >:nth-child(1){
    font-weight: 600;
    font-size:23px;
}
.sec4{
    padding-top:0px;
}
}
@media (max-width: 873px) {
    .swiper-slide {
        margin-bottom:0px;
    }
    h1{
        margin-top:0px;
        margin-bottom: 0px;
    }

}

        














.swiper-slide {
  background: #eee;
  padding: 20px;
  text-align: center;
  border-radius: 12px;
  font-size: 2rem;
  font-weight: bold;
  margin-bottom: 0px;
}
.swiper-slide:hover {
  background: #ddd;
  transform: scale(1.05);
  transition: transform 0.3s ease;
  color:lightblue;
  margin-bottom:0px;

}
.sec-5 h1{
    margin-top:50px;
    text-align: center;
    font-size:50px;
    font-weight: 600;
    font-family: Arial, sans-serif;
    margin-bottom: 0px;

}
.sec5{
    margin-top: 20px;
    padding-bottom: 0px;
    margin-bottom: 0px;
    font-family: Arial, sans-serif;

}

